# modern-compiler-implementation

./: .gitignore  README.md  build.gradle  settings.gradle
ocaml/compiler/: compiler.opam  dune-project
ocaml/compiler/lib/: grammar.ml  interpreter.ml  math.ml  maxargs.ml  stringutils.ml
ocaml/compiler/test/: compiler.ml  dune  evaluate.ml  interpreter.ml  maxargs.ml  program.ml  stringutils.ml
src/main/kotlin/com/compiler/: expression_list.kt  grammar.kt  max_args.kt
src/test/kotlin/com/compiler/: MaxArgsTest.kt
