(lang dune 3.1)

(name compiler)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name compiler)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune (ounit2 (and :with-test (= "2.2.6"))))
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
